--- a/index.css
+++ b/index.css
@@ -18,12 +18,20 @@ h2 {
     font-style: italic;
 }
 
+.special2 {
+    color: lightgreen;
+    font-style: italic;
+}
+
 #logo {
     margin-top: 2%;
 }
 
 img {
-    margin-left: 5px;
+    margin-left: 15px;
+    margin-right: 15px;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 body {
@@ -50,13 +58,28 @@ fieldset {
     margin-bottom: 2%;
 }
 
-div {
-    size: 80%;
-}
-
 .div2,
 .div3 {
     clear: both;
+}
+
+li,
+a {
+    color: white;
+    text-decoration: none;
+    margin-bottom: 3%;
+}
+
+a :hover {
+    border: 3px solid red;
+}
+
+#field5 {
+    text-align: center;
+    clear: both;
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 30%;
 }
 
 footer {
